Alignment fix for webdev .description class and right side titles

--- a/portfolio/portfolio.scss
+++ b/portfolio/portfolio.scss
@@ -639,23 +639,22 @@ div#webdev-wrapper .home-tint {
 #webdev-wrapper {
   section .title {
     width: 40%;
-    color: white;
     position: absolute;
     top: 1.2vw;
     right: 0vw;
     font-size: 3vw;
     line-height: 3.5vw;
-    padding-left: 1vw;
+    padding-left: 1.2vw;
     padding-top: 0.5vw;
     padding-bottom: 0.5vw;
     font-family: "Fjalla One";
+    color: white;
     background-color: #328aab;
-    box-shadow: 5px 7px 7px -5px #333333;
   }
   .description {
     top: 9vw;
     position: absolute;
-    right: 0.9vw;
+    right: -0.1vw;
     width: 41vw;
     height: 70vh;
     color: white;
@@ -1115,10 +1114,10 @@ footer {
       position: absolute;
       width: 100vw;
       font-size: 10px;
-      top: 16vh;
+      top: 24vh;
       .tabs {
         margin-left: 5%;
-        top: 0vh;
+        top: 22vh;
         width: 50vw;
       }
       .tab {
@@ -1126,45 +1125,57 @@ footer {
         padding: 2vw;
       }
       .content {
-        background-color: rgba(30, 30, 30, 0.5);
-        color: white;
-        width: 80%;
-        position: absolute;
-        top: 5vw;
-        padding-left: 2vw;
-        padding-right: 2vw;
-        padding-top: 1vw;
-        padding-bototm: 1vw;
-        font-family: "Roboto", sans-serif;
-        & p {
-          color: white;
-          font-family: "Roboto", sans-serif;
-          font-weight: 300;
-          font-size: 1vw;
-          line-height: 1.5vw;
-          position: relative;
-          font-weight: 100;
-          top: -1.1vw;
-          &:first-of-type {
-            padding-top: 0.6vw;
-          }
-        }
+        top: 7vh;
+        border: none;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        width: 86%;
+        padding: 0 2vw;
+      }
+      .content p {
+        font-size: 3.5vw;
+        line-height: 5vw;
+        font-weight: 100;
       }
       ul li, span {
-        font-size: 3vw;
-        line-height: 3.5vw;
+        font-size: 3.3vw;
+        line-height: 5vw;
         text-decoration: none;
       }
+      ul {
+        margin-top: 0.7vw;
+      }
+      ul:last-child {
+        margin-bottom: 1.5vw;
+      }
 
+      span {
+        border-bottom: 1px solid white;
+      }
       .next {
         display: none;
       }
-      ul {
-        margin-left: 3vw;
-        font-weight: 300;
-        li {
-          font-weight: 300;
-        }
+
+      .gall {
+        height: 65vh;
+      }
+      .display-image {
+        height: 72%;
+        margin-bottom: 2vw;
+        margin-top: 2vw;
+      }
+      .small-images {
+        width: 100%;
+      }
+      .image-wrapper {
+        width: 18%;
+      }
+
+      .video-wrapper {
+        padding-top: 4vw;
+        margin-bottom: 0vw;
+        height: 50vh;
       }
     }
 
